# contextfilter

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
contextfilter/: __init__.py  main.py
tests/: test_main.py
