[tool.poetry]
name = "contextfilter"
version = "0.1.1"
description = "ContextVars Filter for easily enriching log records"
authors = ["Aviram Hassan <aviramyhassan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.3"
isort = "^5.3.2"
mypy = "^0.782"
pytest = "^6.0.1"
pytest-cov = "^2.10.0"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
